--- a/lib/cdt/CMakeLists.txt
+++ b/lib/cdt/CMakeLists.txt
@@ -40,11 +40,14 @@ install(
     DESTINATION ${HEADER_INSTALL_DIR}
 )
 
-# Specify man pages to be installed
-install(
-    FILES cdt.3
-    DESTINATION ${MAN_INSTALL_DIR}
-)
+# Only install man pages on non-Windows systems
+if(NOT WIN32)
+    # Specify man pages to be installed
+    install(
+        FILES cdt.3
+        DESTINATION ${MAN3_INSTALL_DIR}
+    )
+endif()
 
 # Specify library version and soversion
 set_target_properties(cdt PROPERTIES
