--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,8 +51,12 @@ set(BINARY_INSTALL_DIR      bin)
 set(LIBRARY_INSTALL_DIR     lib)
 set(PLUGIN_INSTALL_DIR      ${LIBRARY_INSTALL_DIR}/graphviz)
 set(HEADER_INSTALL_DIR      include/graphviz)
-set(MAN_INSTALL_DIR         share/man/man3)
-set(PKGCONFIG_DIR	    lib/pkgconfig)
+set(MAN_BASE_INSTALL_DIR    share/man)
+set(MAN1_INSTALL_DIR        ${MAN_BASE_INSTALL_DIR}/man1)
+set(MAN3_INSTALL_DIR        ${MAN_BASE_INSTALL_DIR}/man3)
+set(MAN7_INSTALL_DIR        ${MAN_BASE_INSTALL_DIR}/man7)
+set(MAN_INSTALL_DIR         ${MAN3_INSTALL_DIR}) # Deprecated...
+set(PKGCONFIG_DIR	        lib/pkgconfig)
 # TODO: Find a way to check for groff and ps2pdf for manpage pdf generation
 # set(MAN_PDF_INSTALL_DIR share/graphviz/doc/pdf)
 set(TOP_SOURCE_DIR          "${CMAKE_SOURCE_DIR}")
