--- a/lib/gvc/CMakeLists.txt
+++ b/lib/gvc/CMakeLists.txt
@@ -95,11 +95,14 @@ install(
     DESTINATION ${HEADER_INSTALL_DIR}
 )
 
-# Specify man pages to be installed
-install(
-    FILES gvc.3
-    DESTINATION ${MAN_INSTALL_DIR}
-)
+# Only install man pages on non-Windows systems
+if(NOT WIN32)
+    # Specify man pages to be installed
+    install(
+        FILES gvc.3
+        DESTINATION ${MAN3_INSTALL_DIR}
+    )
+endif()
 
 # Specify library version and soversion
 set_target_properties(gvc PROPERTIES
