Replaced CMake test with rtest2 run via pytest

--- a/rtest2/CMakeLists.txt
+++ b/rtest2/CMakeLists.txt
@@ -5,7 +5,7 @@ set(RTEST2_REFERENCE_BASEZIPFILE "${RTEST2_REFERENCE_BASEZIPDIR}.zip")
 
 # Copy minimal required test files from source directory
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/TESTS.json"
-          "${CMAKE_CURRENT_SOURCE_DIR}/rtest2.py"
+          "${CMAKE_CURRENT_SOURCE_DIR}/test_rtest2.py"
           "${CMAKE_CURRENT_SOURCE_DIR}/${RTEST2_REFERENCE_BASEZIPFILE}"
           DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
@@ -14,8 +14,18 @@ execute_process(WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
                 COMMAND "${CMAKE_COMMAND}" -E tar x ${RTEST2_REFERENCE_BASEZIPFILE}
 )
 
+# OK
+# add_test(NAME rtest2_standalone
+#          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+#          COMMAND ${PYTHON_EXECUTABLE} test_rtest2.py -x $<TARGET_FILE:dot> -r ${RTEST2_REFERENCE_BASEZIPDIR}
+#          CONFIGURATIONS "Debug" "Release" ""
+# )
+
+# Run via pytest
 add_test(NAME rtest2
          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-         COMMAND ${PYTHON_EXECUTABLE} rtest2.py -x $<TARGET_FILE:dot> -r ${RTEST2_REFERENCE_BASEZIPDIR}
+         COMMAND ${PYTHON_EXECUTABLE} -m pytest test_rtest2.py
+                                                --rtest2-dot-executable $<TARGET_FILE:dot>
+                                                --rtest2-reference-dir "${CMAKE_CURRENT_BINARY_DIR}/${RTEST2_REFERENCE_BASEZIPDIR}"
          CONFIGURATIONS "Debug" "Release" ""
 )
