--- a/lib/pathplan/CMakeLists.txt
+++ b/lib/pathplan/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-D_BLD_pathplan -DPATHPLAN_EXPORTS)
 
-add_library(pathplan SHARED
+add_library(pathplan 
     # Header files
     pathgeom.h
     pathplan.h
@@ -32,10 +32,6 @@ target_include_directories(pathplan PRIVATE
 
 # Specify library version and soversion
 set_target_properties(pathplan PROPERTIES
-	FRAMEWORK TRUE
-	FRAMEWORK_VERSION A
-	MACOSX_FRAMEWORK_IDENTIFIER com.graphviz.pathplan
-	PUBLIC_HEADER "pathplan.h"
     VERSION 4.0.0
     SOVERSION 4
 )
@@ -46,7 +42,6 @@ install(
     RUNTIME DESTINATION ${BINARY_INSTALL_DIR}
     LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR}
     ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR}
-    FRAMEWORK DESTINATION ${GV_FRAMEWORK_DIR}
 )
 
 # Specify headers to be installed
