--- a/plugin/gd/CMakeLists.txt
+++ b/plugin/gd/CMakeLists.txt
@@ -1,6 +1,6 @@
 if (GD_FOUND)
 
-add_library(gvplugin_gd SHARED
+add_library(gvplugin_gd
     # Source files
     gvdevice_gd.c
     gvloadimage_gd.c
@@ -30,9 +30,6 @@ target_link_libraries(gvplugin_gd
 
 # Specify library version and soversion
 set_target_properties(gvplugin_gd PROPERTIES
-	FRAMEWORK TRUE
-	FRAMEWORK_VERSION A
-	MACOSX_FRAMEWORK_IDENTIFIER com.graphviz.plugin.gd
     VERSION ${GRAPHVIZ_PLUGIN_VERSION}.0.0
     SOVERSION ${GRAPHVIZ_PLUGIN_VERSION}
 )
@@ -43,7 +40,6 @@ install(
     RUNTIME DESTINATION ${BINARY_INSTALL_DIR}
     LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR}
     ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR}
-    FRAMEWORK DESTINATION ${GV_FRAMEWORK_DIR}
 )
 
 # Include DLLs with this library on Windows
