--- a/plugin/neato_layout/CMakeLists.txt
+++ b/plugin/neato_layout/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(gvplugin_neato_layout SHARED
+add_library(gvplugin_neato_layout
     # Source files
 	gvplugin_neato_layout.c
 	gvlayout_neato_layout.c
