add a GVContext class with creation with built-in plugins

--- a/lib/gvc/CMakeLists.txt
+++ b/lib/gvc/CMakeLists.txt
@@ -113,6 +113,50 @@ set_target_properties(gvc PROPERTIES
     SOVERSION 6
 )
 
+# C++ API
+
+if (with_cxx_api)
+    add_library(gvc++ SHARED
+        GVContext.h
+        GVContext.cpp
+    )
+
+    set_target_properties(gvc++ PROPERTIES CXX_STANDARD 20)
+    set_target_properties(gvc++ PROPERTIES CXX_STANDARD_REQUIRED ON)
+    if (NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+        set_target_properties(gvc++ PROPERTIES COMPILE_OPTIONS -Wextra)
+    endif()
+
+    target_include_directories(gvc++ PRIVATE
+        ${GRAPHVIZ_LIB_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${GRAPHVIZ_LIB_DIR}/cdt
+        ${GRAPHVIZ_LIB_DIR}/cgraph
+        ${GRAPHVIZ_LIB_DIR}/common
+        ${GRAPHVIZ_LIB_DIR}/pathplan
+    )
+
+    target_link_libraries(gvc++ PUBLIC
+        gvc
+    )
+
+    # Installation location of library files
+    install(
+        TARGETS gvc++
+        RUNTIME DESTINATION ${BINARY_INSTALL_DIR}
+        LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR}
+        ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR}
+    )
+
+    # Specify headers to be installed
+    install(
+        FILES
+        GVContext.h
+        DESTINATION ${HEADER_INSTALL_DIR}
+    )
+
+endif()
+
 # Include DLLs with this library on Windows
 if (WIN32)
     install(
