--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,7 +23,7 @@ target_link_libraries(test_common PUBLIC
     gvplugin_dot_layout
     gvplugin_gd
     gvplugin_neato_layout
-    cgraph
+    cgraph++
 )
 
 macro(create_test testname)
@@ -45,3 +45,4 @@ macro(create_test testname)
 endmacro()
 
 create_test(simple)
+create_test(AGraph_create)
