--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,3 +49,4 @@ create_test(simple)
 create_test(AGraph_create)
 create_test(GVContext_create)
 create_test(GVContext_layout)
+create_test(GVContext_render)
