add a few first tests of the rendered SVG

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -56,3 +56,4 @@ create_test(AGraph_create)
 create_test(GVContext_create)
 create_test(GVContext_layout)
 create_test(GVContext_render)
+create_test(GVContext_render_svg)
