--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -236,6 +236,7 @@ portable-source:
         - ci/install-packages.sh
         - export GV_VERSION=$( cat VERSION )
         - export OS_ID=$( cat OS_ID )
+        - ci/test_coverage.py --init
         - pushd build
         - ctest --output-on-failure
         - popd
@@ -243,7 +244,10 @@ portable-source:
         # memory leak detections. Disable those for now.
         - export ASAN_OPTIONS=detect_leaks=0
         - python3 -m pytest --verbose --junitxml=report.xml ci/tests.py tests rtest
+        - ci/test_coverage.py --analyze
     artifacts:
+        paths:
+            - coverage/**
         reports:
             junit: ./report.xml
     except:
@@ -450,7 +454,7 @@ ubuntu20-10-cmake-ASan-build:
         # fail on any compiler warnings
         - export CFLAGS=-Werror
         - export CXXFLAGS=-Werror
-        - export CMAKE_OPTIONS="-Duse_sanitizers=ON"
+        - export CMAKE_OPTIONS="-Duse_sanitizers=ON -Duse_coverage=ON"
         - echo experimental > COLLECTION
     tags:
         - linux
@@ -488,7 +492,7 @@ ubuntu21-04-cmake-ASan-build-for-ctest:
         # fail on any compiler warnings
         - export CFLAGS=-Werror
         - export CXXFLAGS=-Werror
-        - export CMAKE_OPTIONS="-Duse_sanitizers=ON -Dwith_cxx_tests=ON "
+        - export CMAKE_OPTIONS="-Duse_sanitizers=ON -Duse_coverage=ON -Dwith_cxx_tests=ON "
         - echo experimental > COLLECTION
     # override the deb_build_definition artifacts since we need more
     # files from the build directory when running ctest in the test
@@ -505,6 +509,8 @@ ubuntu21-04-cmake-ASan-build-for-ctest:
             # them.
             - build/lib/**/lib*.so.*
             - build/plugin/**/lib*.so.*
+            # the coverage analysis needs the .gcno files
+            - build/**/*.gcno
             # the packages need to be installed for the post-install tests
             - Packages/*/*/*/*/*/*deb
             - Metadata/*/*/*/configure.log
