GVC: export `gvToolTred`
This is a temporary bandaid solution for a missing export from the GVC
library.  The general solution of fixing the annotation on the
declarations is better suited for Windows.  That would allow the
compiler to make appropriate optimizations.  Modern MinGW should also be
able to handle the exports through the attribute, avoiding the need to
maintain the extra def file.

The attributes could also be further generalized to aid on Unix
platforms.

This partially addresses #2507.

--- a/lib/gvc.vcxproj.filters
+++ b/lib/gvc.vcxproj.filters
@@ -188,6 +188,9 @@
     <ClCompile Include="gvc\gvtextlayout.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gvc\gvtool_tred.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="gvc\gvusershape.c">
       <Filter>Source Files</Filter>
     </ClCompile>
