--- a/lib/gvc.vcxproj
+++ b/lib/gvc.vcxproj
@@ -190,6 +190,7 @@ awk -f $(SolutionDir)awk\colortbl.awk color_lib &gt; common\colortbl.h</Command>
     <ClCompile Include="gvc\gvplugin.c" />
     <ClCompile Include="gvc\gvrender.c" />
     <ClCompile Include="gvc\gvtextlayout.c" />
+    <ClCompile Include="gvc\gvtool_tred.c" />
     <ClCompile Include="gvc\gvusershape.c" />
     <ClCompile Include="label\index.c" />
     <ClCompile Include="label\node.c" />
