fix lib/ortho objs not included in lib/gvc lib for CMake builds
This is what the autotools builds do.

Whithout this, the ortho object files ended up both in
libgvplugin_dot_layout.so and libgvplugin_neato_layout.so which caused
an ASan odr_violation.

The ASan error message was:

==235826==ERROR: AddressSanitizer: odr-violation (0x7ff55b6c72c0):
  [1] size=4 'odb_flags' /home/magjac/graphviz/lib/ortho/ortho.c:44:5
  [2] size=4 'odb_flags' /home/magjac/graphviz/lib/ortho/ortho.c:44:5
These globals were registered at these points:
  [1]:
    #0 0x7ff55b8c5938 in __asan_register_globals ../../../../src/libsanitizer/asan/asan_globals.cpp:341
    #1 0x7ff55b2ce1a2 in _sub_I_00099_3 (/home/magjac/graphviz/build/plugin/dot_layout/libgvplugin_dot_layout.so.6+0x43b1a2)
    #2 0x7ff55c28c96d  (/lib64/ld-linux-x86-64.so.2+0x1196d)

  [2]:
    #0 0x7ff55b8c5938 in __asan_register_globals ../../../../src/libsanitizer/asan/asan_globals.cpp:341
    #1 0x7ff55a8008e4 in _sub_I_00099_3 (/home/magjac/graphviz/build/plugin/neato_layout/libgvplugin_neato_layout.so.6+0x6d38e4)
    #2 0x7ff55c28c96d  (/lib64/ld-linux-x86-64.so.2+0x1196d)

==235826==HINT: if you don't care about these errors you may set ASAN_OPTIONS=detect_odr_violation=0
SUMMARY: AddressSanitizer: odr-violation: global 'odb_flags' at /home/magjac/graphviz/lib/ortho/ortho.c:44:5
==235826==ABORTING

Fixes https://gitlab.com/graphviz/graphviz/-/issues/2096.

--- a/lib/gvc/CMakeLists.txt
+++ b/lib/gvc/CMakeLists.txt
@@ -57,6 +57,7 @@ target_link_libraries(gvc PUBLIC
     cdt
     cgraph
     label
+    ortho
     pack
     pathplan
     xdot
@@ -70,7 +71,9 @@ if (NOT WIN32)
 endif()
 
 if (${with_ortho})
-    target_link_libraries(gvc PUBLIC ortho)
+    target_link_libraries(gvc PRIVATE
+        $<TARGET_OBJECTS:ortho_obj>
+    )
 endif()
 
 # Installation location of library files
