--- a/lib/ortho/CMakeLists.txt
+++ b/lib/ortho/CMakeLists.txt
@@ -2,7 +2,7 @@ if (with_ortho)
 
 add_definitions(-D_BLD_gvc=1)
 
-add_library(ortho STATIC
+add_library(ortho_obj OBJECT
     # Header files
     fPQ.h
     maze.h
@@ -23,7 +23,7 @@ add_library(ortho STATIC
     trapezoid.c
 )
 
-target_include_directories(ortho PRIVATE
+target_include_directories(ortho_obj PRIVATE
     ${GRAPHVIZ_LIB_DIR}
     ${GRAPHVIZ_LIB_DIR}/cdt
     ${GRAPHVIZ_LIB_DIR}/cgraph
@@ -31,6 +31,10 @@ target_include_directories(ortho PRIVATE
     ${GRAPHVIZ_LIB_DIR}/gvc
     ${GRAPHVIZ_LIB_DIR}/pack
     ${GRAPHVIZ_LIB_DIR}/pathplan
+)
+
+add_library(ortho STATIC
+    $<TARGET_OBJECTS:ortho_obj>
 )
 
 endif (with_ortho)
