add JUnit test reports from C++ tests to artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -259,7 +259,7 @@ portable-source:
         paths:
             - coverage/**
         reports:
-            junit: ./report.xml
+            junit: [./report.xml, build/tests/test_*.xml]
             cobertura: coverage.xml
     except:
         - tags
