--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -239,6 +239,9 @@ portable-source:
         - pushd build
         - ctest --output-on-failure
         - popd
+        # Many of the tests run by pytest currently trigger ASan
+        # memory leak detections. Disable those for now.
+        - export ASAN_OPTIONS=detect_leaks=0
         - python3 -m pytest --verbose --junitxml=report.xml ci/tests.py tests rtest
     artifacts:
         reports:
@@ -826,9 +829,6 @@ ubuntu21.04-cmake-ASan-test-including-ctest:
         - export CFLAGS=" -g -fsanitize=address,undefined"
         - export CXXFLAGS=" -g -fsanitize=address,undefined"
         - export LDFLAGS=" -g -fsanitize=address,undefined"
-        # FIXME: remove the following when Graphviz can pass the test suite
-        # leak-free
-        - export ASAN_OPTIONS=detect_leaks=0
         - echo experimental > COLLECTION
     needs:
         - job: portable-source
