add the SVG++ library as a test dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ find_package(GD)
 find_package(LTDL)
 find_package(PangoCairo)
 find_package(ZLIB)
+find_package(Svgpp)
 
 if (UNIX)
     find_library(MATH_LIB m)
