--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ set_target_properties(test_common PROPERTIES CXX_STANDARD 20)
 set_target_properties(test_common PROPERTIES CXX_STANDARD_REQUIRED ON)
 target_include_directories(test_common PRIVATE
     ${GRAPHVIZ_LIB_DIR}
+    ${Svgpp_INCLUDE_DIR}
 )
 target_link_libraries(test_common PUBLIC Catch2::Catch2)
 target_link_libraries(test_common PUBLIC
