--- a/lib/gvc/CMakeLists.txt
+++ b/lib/gvc/CMakeLists.txt
@@ -121,6 +121,8 @@ if (with_cxx_api)
         GVContext.cpp
         GVLayout.h
         GVLayout.cpp
+        GVRenderData.h
+        GVRenderData.cpp
     )
 
     set_target_properties(gvc++ PROPERTIES CXX_STANDARD 20)
@@ -155,6 +157,7 @@ if (with_cxx_api)
         FILES
         GVContext.h
         GVLayout.h
+        GVRenderData.h
         DESTINATION ${HEADER_INSTALL_DIR}
     )
 
